<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/masskara"
    tools:context=".Cansi">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/food2"
        android:textColor="#000"
        android:textSize="32sp"
        android:textStyle="bold">


    </TextView>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="0dp"
        android:src="@drawable/cansi"
        android:contentDescription="@string/food1" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView2"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_margin="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:textColor="#000"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="274dp"
                android:textSize="15sp"
                android:text="@string/cansidesc1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:textColor="#000"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="275dp"
                android:textSize="15sp"
                android:text="@string/cansidesc2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:textColor="#000"
                android:layout_marginTop="72dp"
                android:layout_marginBottom="275dp"
                android:textSize="15sp"
                android:text="@string/cansidesc3" />





        </androidx.cardview.widget.CardView>
    </GridLayout>




</RelativeLayout>